--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,20 +1,45 @@
----
-type: page
-title: About
-date: 2021-03-19
----
+// pages/index.js (Updated with all 4 plans)
+import { useState } from 'react';
 
-# Your Name
+export default function Home() {
+  const [user, setUser] = useState(null);
 
-Hey, I'm a Senior Software Engineer at Company. I enjoy working with Next.js and crafting beautiful front-end experiences.
+  return (
+    <div className="container">
+      <h1>AI Cold Email Bot</h1>
+      
+      <div className="plans">
+        {/* Free Plan */}
+        <div className="plan free">
+          <h3>Free</h3>
+          <p>5 emails/month</p>
+          <button onClick={() => handleSignUp('free')}>Get Started</button>
+        </div>
 
-This portfolio is built with **Next.js** and a library called [Nextra](https://nextra.vercel.app/). It allows you to write Markdown and focus on the _content_ of your portfolio.
+        {/* Basic Plan */}
+        <div className="plan basic">
+          <h3>Basic ($19/month)</h3>
+          <p>50 emails/month</p>
+          <button onClick={() => handleUpgrade('basic')}>Upgrade</button>
+        </div>
 
-[**Deploy your own**](https://vercel.com/new/clone?demo-title=Portfolio+Starter+Kit&demo-description=Easily+create+a+portfolio+with+Next.js+and+Markdown.&demo-url=https%3A%2F%2Fdemo.vercel.blog%2F&demo-image=%2F%2Fimages.ctfassets.net%2Fe5382hct74si%2F2aC4eHLrOKmT4fnLfoNGK2%2F14b1e6bbe598ec023ffe85001d31e634%2FCleanShot_2022-04-11_at_23.12.01.png&project-name=Portfolio+Starter+Kit&repository-name=portfolio-starter-kit&repository-url=https%3A%2F%2Fgithub.com%2Fvercel%2Fnextjs-portfolio-starter&from=templates&skippable-integrations=1&teamCreateStatus=hidden) in a few minutes.
+        {/* Advanced Plan */}
+        <div className="plan advanced">
+          <h3>Advanced ($49/month)</h3>
+          <p>200 emails/month</p>
+          <button onClick={() => handleUpgrade('advanced')}>Upgrade</button>
+        </div>
 
----
+        {/* Elite Plan */}
+        <div className="plan elite">
+          <h3>Elite ($99/month)</h3>
+          <p>Unlimited emails</p>
+          <button onClick={() => handleUpgrade('elite')}>Upgrade</button>
+        </div>
+      </div>
 
-- Twitter [@yourname](https://twitter.com/yourname)
-- GitHub [@yourname](https://github.com/yourname)
-- Instagram [@yourname](https://instagram.com/yourname)
-- Email your@name.com
+      {/* Email Generator Component */}
+      {user && <EmailGenerator user={user} />}
+    </div>
+  );
+}
